--- a/_Main_AutoML_E2E_-_YAML-Python-Import.ipynb
+++ b/_Main_AutoML_E2E_-_YAML-Python-Import.ipynb
@@ -464,6 +464,7 @@
    "source": [
     "#Initialize pipeline object\n",
     "from pipelines.train_pipeline import pipeline_controller\n",
+    "import time\n",
     "\n",
     "PROJECT_ID = \"hasanrafiq-test-331814\"\n",
     "REGION=\"us-central1\"\n",
