Update component_specs/classification_eval_model_v2.yaml, components/classification_eval_model_v2.py, _Main_AutoML_E2E_-_YAML-Python-Import.ipynb

--- a/_Main_AutoML_E2E_-_YAML-Python-Import.ipynb
+++ b/_Main_AutoML_E2E_-_YAML-Python-Import.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "9452729c-7737-452b-887e-e25bf9b57416",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "bd0d4779-edcd-4ddd-baa9-8703c84f9869",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "17ab2d0c-c027-43c6-9ef6-15cc73242b45",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,11 @@
     "        ):\n",
     "            \n",
     "            #Load all reusable custom components\n",
-    "            eval_op = kfp.components.load_component('component_specs/classification_eval_model.yaml')\n",
+    "            #Option 1 -> Python function component wrapped as reusable function\n",
+    "            # eval_op = kfp.components.load_component('component_specs/classification_eval_model.yaml')\n",
+    "            \n",
+    "            #Option 2 -> Python component wrapped as reusable package( preferred )\n",
+    "            eval_op = kfp.components.load_component('component_specs/classification_eval_model_v2.yaml')\n",
     "\n",
     "            #Start pipeline formation\n",
     "            dataset_create_op = gcc_aip.TabularDatasetCreateOp(\n",
@@ -430,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "14582539-343f-4be7-b4e1-82de3606b33a",
    "metadata": {},
    "outputs": [
@@ -438,26 +442,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:google.cloud.aiplatform.pipeline_jobs:Creating PipelineJob\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/.local/lib/python3.7/site-packages/kfp/v2/compiler/compiler.py:1266: FutureWarning: APIs imported from the v1 namespace (e.g. kfp.dsl, kfp.components, etc) will not be supported by the v2 compiler since v2.0.0\n",
-      "  category=FutureWarning,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob created. Resource name: projects/318948681665/locations/us-central1/pipelineJobs/automl-tab-beans-training-v2-20211220070409\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:Creating PipelineJob\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob created. Resource name: projects/318948681665/locations/us-central1/pipelineJobs/automl-tab-beans-training-v2-20211229071611\n",
       "INFO:google.cloud.aiplatform.pipeline_jobs:To use this PipelineJob in another session:\n",
-      "INFO:google.cloud.aiplatform.pipeline_jobs:pipeline_job = aiplatform.PipelineJob.get('projects/318948681665/locations/us-central1/pipelineJobs/automl-tab-beans-training-v2-20211220070409')\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:pipeline_job = aiplatform.PipelineJob.get('projects/318948681665/locations/us-central1/pipelineJobs/automl-tab-beans-training-v2-20211229071611')\n",
       "INFO:google.cloud.aiplatform.pipeline_jobs:View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/automl-tab-beans-training-v2-20211220070409?project=318948681665\n"
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/automl-tab-beans-training-v2-20211229071611?project=318948681665\n"
      ]
     }
    ],
